bin/testsuite/tests/compiler/src/errors/compiler1290.swg
#global testerror "Err0232"

#[Swag.Mixin]
func toto()
{
    var x = 666
}

#test
{
    toto()
    x = 0
    toto()
}
